--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackathon ProA</title>
-    <link rel="stylesheet" href="estilosHackathon.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="http://localhost/phpmyadmin/index.php?route=/">
 </head>
 <body>
